# internal/adapter/controller/refresh_token_controller.go
@@ -17,6 +17,20 @@ func NewRefreshTokenController(service port.RefreshTokenService) *RefreshTokenCo
 	return &RefreshTokenController{service}
 }
 
+// Execute godoc
+//
+// @Symmary Refresh access token
+// @Description Refresh the access token using a valid refresh token.
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param refreshToken body port.RefreshTokenInput true "Refresh token"
+// @Success 200 {object} port.RefreshTokenOutput "Access token refreshed successfully"
+// @Failure 400 {object} ErrorResponse "Bad request (invalid body or validation error)"
+// @Failure 404 {object} ErrorResponse "Not found (token or user not found)"
+// @Failure 401 {object} ErrorResponse "Unauthorized (invalid refresh token)"
+// @Failure 500 {object} ErrorResponse "Internal server error"
+// @Router /auth/refresh-token [post]
 func (c *RefreshTokenController) Execute(w http.ResponseWriter, r *http.Request) (Response, error) {
 	var input port.RefreshTokenInput
 	if err := json.NewDecoder(r.Body).Decode(&input); err != nil {
